# proxmox-datacenter-manager

./: .buildbot.yml  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  defines.mk  pdm-permission-system.md  visualize_rrd.py
api/: Cargo.toml
api/pdm-api-common/: Cargo.toml
api/pdm-api-common/src/: env.rs  lib.rs
api/pdm-api-common/src/api/: mod.rs
api/pdm-api-common/src/auth/: certs.rs  csrf.rs  key.rs  mod.rs  tfa.rs  ticket.rs
api/pdm-api-types/: Cargo.toml
api/pdm-api-types/src/: acl.rs  common_regex.rs  lib.rs  remotes.rs  user.rs
api/pdm-buildcfg/: Cargo.toml
api/pdm-buildcfg/src/: lib.rs
api/pdm-client/: Cargo.toml
api/pdm-client/src/: lib.rs
api/pdm-config/: Cargo.toml
api/pdm-config/src/: acl.rs  cached_user_info.rs  certificate_config.rs  config_version_cache.rs  domains.rs  lib.rs  remotes.rs  section_config.rs  setup.rs  token_shadow.rs  user.rs
api/pdm-ticket/: Cargo.toml
api/pdm-ticket/src/: lib.rs
api/proxmox-client/: Cargo.toml
api/proxmox-client/src/: client.rs  lib.rs
api/proxmox-datacenter-api/: Cargo.toml
api/proxmox-datacenter-api/src/: lib.rs  main.rs  pve.rs  remotes.rs
api/proxmox-datacenter-api/src/auth/: key.rs  mod.rs
api/proxmox-datacenter-privileged-api/: Cargo.toml
api/proxmox-datacenter-privileged-api/src/: lib.rs  main.rs
api/proxmox-datacenter-proxy/: Cargo.toml
api/proxmox-datacenter-proxy/src/: main.rs
api/proxmox-login/: Cargo.toml
api/proxmox-login/src/: lib.rs
api/proxmox-section-config-typed/src/: lib.rs
api/pve-client/: Cargo.toml
api/pve-client/src/: code.rs  helpers.rs  lib.rs  types.rs  verifiers.rs
api/server/: Cargo.toml
api/server/src/: acl.rs  lib.rs
api/src/: main.rs
api/src/auth/: certs.rs  csrf.rs  mod.rs  tfa.rs
cli/admin/: Cargo.toml
cli/admin/src/: acme.rs  main.rs  remotes.rs  support_eligibility.rs  support_status.rs
cli/client/: Cargo.toml
cli/client/src/: acl.rs  config.rs  main.rs  metric_collection.rs  pbs.rs  pve.rs  remotes.rs  resources.rs  subscriptions.rs  term.rs  time.rs  upid.rs  user.rs
cli/pdmAtoB/: Cargo.toml
cli/pdmAtoB/src/: main.rs
cli/proxmox-fido2/: Cargo.toml
cli/proxmox-fido2/src/: lib.rs
lib/pdm-api-types/: Cargo.toml
lib/pdm-api-types/src/: acl.rs  acme.rs  auto_installer.rs  ceph.rs  firewall.rs  lib.rs  metric_collection.rs  node_config.rs  openid.rs  pbs.rs  proxy.rs  remote_updates.rs  remote_upid.rs  remotes.rs  resource.rs  rrddata.rs  sdn.rs  subscription.rs  translation.rs  user.rs  views.rs
lib/pdm-api-types/tests/: test_import.rs
lib/pdm-client/: Cargo.toml
lib/pdm-client/src/: lib.rs
lib/pdm-config/: Cargo.toml
lib/pdm-config/src/: auto_install.rs  ceph.rs  certificate_config.rs  config_version_cache.rs  domains.rs  lib.rs  node.rs  remotes.rs  setup.rs  subscriptions.rs  views.rs
lib/proxmox-section-config-typed/: Cargo.toml
proxmox-datacenter-client/: Cargo.toml
proxmox-datacenter-client/src/: env.rs  fido.rs  macros.rs  main.rs  pve.rs  remotes.rs  tags.rs  user.rs  vm.rs
proxmox-datacenter-client/src/env/: fingerprint_cache.rs  mod.rs
proxmox-datacenter-manager/: Cargo.toml
proxmox-datacenter-manager/src/: main.rs  remotes.rs
server/: Cargo.toml
server/src/: acl.rs  api_cache.rs  connection.rs  context.rs  jobstate.rs  lib.rs  location_cache.rs  namespaced_cache.rs  parallel_fetcher.rs  pbs_client.rs  remote_updates.rs  report.rs  resource_cache.rs  sdn_client.rs  task_cache.rs  task_utils.rs
server/src/api/: metric_collection.rs  mod.rs  remote_shell.rs  remote_tasks.rs  remote_updates.rs  remotes.rs  resources.rs  rrd_common.rs
server/src/auth/: certs.rs  csrf.rs  key.rs  ldap.rs  mod.rs  tfa.rs
server/src/ceph/: cache.rs  dispatch.rs  mod.rs  registry.rs  sweep.rs
server/src/metric_collection/: collection_task.rs  local_collection_task.rs  mod.rs  remote_collection_task.rs  rrd_cache.rs  rrd_task.rs  state.rs  top_entities.rs
server/src/remote_cache/: back_off.rs  mod.rs
server/src/remote_tasks/: mod.rs  refresh_task.rs  task_cache.rs
server/src/test_support/: fake_remote.rs  mod.rs  temp.rs
server/src/views/: mod.rs  tests.rs
ui/: Cargo.toml  Makefile  README.md  Trunk.toml  index.hbs  index.html
ui/css/: crisp-yew-style.scss  desktop-yew-style.scss  material-yew-style.scss  pdm.scss
ui/debian/: changelog  control  rules
ui/src/: certificates.rs  guests.rs  lib.rs  load_result.rs  main.rs  main_menu.rs  renderer.rs  search_provider.rs  tasks.rs  top_nav_bar.rs  view_list_context.rs
ui/src/administration/: mod.rs  node_status.rs
ui/src/ceph/: cephfs.rs  cluster.rs  clusters.rs  dashboard.rs  flags.rs  managers.rs  mod.rs  monitors.rs  osds.rs  pools.rs  renderer.rs  view.rs
ui/src/configuration/: access_control.rs  mod.rs  permission_path_selector.rs  subscription_assign.rs  subscription_keys.rs  subscription_panel.rs  subscription_registry.rs  views.rs  webauthn.rs
ui/src/dashboard/: filtered_tasks.rs  gauge_panel.rs  guest_panel.rs  map.rs  mod.rs  node_status_panel.rs  pbs_datastores_panel.rs  refresh_config_edit.rs  remote_panel.rs  resource_status.rs  resource_tree.rs  sdn_zone_panel.rs  status_row.rs  subscription_info.rs  subscriptions_list.rs  tasks.rs  top_entities.rs  types.rs  view.rs
ui/src/pbs/: datastore.rs  mod.rs  namespace_selector.rs  remote.rs  snapshot_list.rs  tree.rs
ui/src/pbs/node/: mod.rs  (+1 more)
ui/src/pve/: lxc.rs  mod.rs  node.rs  qemu.rs  remote.rs  remote_overview.rs  storage.rs  tree.rs  utils.rs
ui/src/remotes/: add_wizard.rs  cert_check_window.rs  config.rs  edit_remote.rs  mod.rs  node_url_list.rs  remove_remote.rs  tasks.rs  updates.rs  wizard_page_connect.rs  wizard_page_info.rs  wizard_page_nodes.rs  wizard_page_summary.rs
ui/src/sdn/: mod.rs  zone_tree.rs
ui/src/widget/: content_spacer.rs  migrate_window.rs  mod.rs  pve_migrate_mapping.rs  pve_network_selector.rs  pve_node_selector.rs  pve_realm_selector.rs  pve_storage_selector.rs  remote_endpoint_selector.rs  remote_realm_selector.rs  remote_selector.rs  resource_tree.rs  search_box.rs  snapshot_window.rs  view_filter_selector.rs  view_selector.rs
(+214 files in other folders)
