[workspace.package]
version = "0.1.0"
authors = [
    "Thomas Lamprecht <t.lamprecht@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox-datacenter-manager.git"

exclude = [ "build" ]

[workspace]
members = [
    "api/pdm-buildcfg",

    "api/pdm-api-common",
    "api/pdm-api-types",
    "api/pdm-client",
    "api/pdm-config",

    "api/proxmox-client",

    "api/pve-client",

    "api/proxmox-datacenter-privileged-api",
    "api/proxmox-datacenter-api",


    "proxmox-datacenter-client",
    "proxmox-datacenter-manager",
]

[workspace.dependencies]
# proxmox workspace
proxmox-async = "0.4"
proxmox-auth-api = "0.3"
proxmox-http = { version = "0.9", features = [ "client", "http-helpers", "websocket" ] } # see below
proxmox-io = "1.0.1" # tools and client use "tokio" feature
proxmox-lang = "1.1"
#proxmox-metrics = "0.2"
proxmox-rest-server = "0.4"
# some use "cli", some use "cli" and "server", pbs-config uses nothing
proxmox-router = { version = "2.1", default_features = false }
# everything but pbs-config and pbs-client ues "api-macro"
proxmox-schema = "2"
proxmox-section-config = "2"
proxmox-serde = "0.1.1"
proxmox-shared-memory = "0.3.0"
proxmox-sortable-macro = "0.1.2"
proxmox-subscription = { version = "0.4", features = [ "api-types" ] }
proxmox-sys = "0.5.0"
proxmox-tfa = { version = "4.0", features = [ "api-types" ] }
proxmox-time = "1.1.2"
proxmox-uuid = "1"
proxmox-login = { version = "0.1", features = [ "webauthn" ] }

# other proxmox crates
proxmox-acme-rs = "0.4"
proxmox-apt = "0.10"
proxmox-openid = "0.10"

# PDM workspace
pdm-api-common = { path = "api/pdm-api-common" }
pdm-api-types = { path = "api/pdm-api-types" }
pdm-buildcfg = { path = "api/pdm-buildcfg" }
pdm-config = { path = "api/pdm-config" }
proxmox-datacenter-api = { path = "api/proxmox-datacenter-api" }
pdm-client = { path = "api/pdm-client" }

pve-client = { path = "api/pve-client" }

proxmox-client = { path = "api/proxmox-client", features = [ "hyper-client" ] }

# regular crates
anyhow = "1.0"
base64 = "0.13"
bitflags = "1.2.1"
futures = "0.3"
h2 = { version = "0.3", features = [ "stream" ] }
handlebars = "3.0"
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.26.1"
once_cell = "1.3.1"
openssl = "0.10.40"
pam = "0.7"
pam-sys = "0.5"
percent-encoding = "2.1"
pin-project-lite = "0.2"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_plain = "1"
syslog = "6.0"
termcolor = "1.1.2"
thiserror = "1.0"
tokio = "1.6"
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tokio-util = { version = "0.7", features = [ "io" ] }
tower-service = "0.3.0"
url = "2.1"
walkdir = "2"
webauthn-rs = "0.3.2"
xdg = "2.2"
zstd = { version = "0.12", features = [ "bindgen" ] }
