[workspace.package]
version = "0.1.0"
authors = [
    "Thomas Lamprecht <t.lamprecht@proxmox.com>",
    "Proxmox Support Team <support@proxmox.com>",
]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox-datacenter-manager.git"

exclude = [ "build" ]

[profile.release]
codegen-units = 1 # release-buiĺd takes really long otherwise (rustc v1.70 -> 41m, v1.76 -> 12m)

[workspace]
resolver = "2"
members = [
    "lib/pdm-buildcfg",

    "server",
    "lib/pdm-api-types",
    "lib/pdm-client",
    "lib/pdm-config",

    "cli/client",
    "cli/admin",
    "cli/proxmox-fido2",
]

[workspace.dependencies]
# proxmox workspace
proxmox-access-control = "0.2"
proxmox-async = "0.4"
proxmox-auth-api = "0.4"
proxmox-client = "0.5"
proxmox-daemon = "0.1"
proxmox-http = { version = "0.9", features = [ "client", "http-helpers", "websocket" ] } # see below
proxmox-human-byte = "0.1"
proxmox-io = "1.0.1" # tools and client use "tokio" feature
proxmox-lang = "1.1"
proxmox-log = "0.2"
proxmox-login = "0.1.1"
proxmox-rest-server = "0.8"
# some use "cli", some use "cli" and "server", pbs-config uses nothing
proxmox-router = { version = "3.0.0", default-features = false }
proxmox-rrd = { version = "0.4", default-features = false}
proxmox-rrd-api-types = "1.0.2"
# everything but pbs-config and pbs-client use "api-macro"
proxmox-schema = "3.1.1"
proxmox-section-config = "2.1.1"
proxmox-serde = "0.1.1"
proxmox-shared-memory = "0.3.0"
proxmox-simple-config = "0.1"
proxmox-sortable-macro = "0.1.2"
proxmox-subscription = { version = "0.4", features = [ "api-types" ] }
proxmox-sys = "0.6.0"
proxmox-systemd = "0.1"
proxmox-tfa = { version = "5", features = [ "api-types" ], default-features = false }
proxmox-time = "2"
proxmox-uuid = "1"

# other proxmox crates
proxmox-acme = "0.5"
proxmox-apt = "0.11"
proxmox-apt-api-types = "1.0"
proxmox-openid = "0.10"

# api implementation creates
proxmox-config-digest = "0.1"
proxmox-product-config = "0.2"
proxmox-dns-api = "0.1"
proxmox-time-api = "0.1"
proxmox-network-api = "0.1"
proxmox-syslog-api = "0.1"
proxmox-acme-api = "0.1"

# API types for PVE (and later PMG?)
pve-api-types = { path = "lib/proxmox-api-types/pve-api-types" }
# API types for PBS
pbs-api-types = { path = "lib/proxmox-backup/pbs-api-types" }

# PDM workspace
server = { path = "server" }
pdm-api-types = { path = "lib/pdm-api-types" }
pdm-buildcfg = { path = "lib/pdm-buildcfg" }
pdm-config = { path = "lib/pdm-config" }
pdm-client = { path = "lib/pdm-client" }
proxmox-fido2 = { path = "cli/proxmox-fido2" }

# regular crates
anyhow = "1.0"
async-stream = "0.3"
base64 = "0.13"
bitflags = "2.4"
const_format = "0.2"
futures = "0.3"
h2 = { version = "0.4", features = [ "stream" ] }
handlebars = "3.0"
hex = "0.4.3"
http = "0.2"
hyper = { version = "0.14", features = [ "full" ] }
libc = "0.2"
log = "0.4.17"
nix = "0.26.1"
once_cell = "1.3.1"
openssl = "0.10.40"
percent-encoding = "2.1"
pin-project-lite = "0.2"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_plain = "1"
termcolor = "1.1.2"
thiserror = "1.0"
tokio = "1.6"
tokio-openssl = "0.6.1"
tokio-stream = "0.1.0"
tokio-util = { version = "0.7", features = [ "io" ] }
tower-service = "0.3.0"
tracing = "0.1"
url = "2.1"
walkdir = "2"
webauthn-rs = "0.3.2"
xdg = "2.2"
zstd = { version = "0.12", features = [ "bindgen" ] }

# Local path overrides
# NOTE: You must run `cargo update` after changing this for it to take effect!
[patch.crates-io]
# proxmox-access-control = { path = "../proxmox/proxmox-access-control" }
# proxmox-acme-api = { path = "../proxmox/proxmox-acme-api" }
# proxmox-acme = { path = "../proxmox/proxmox-acme" }
# proxmox-api-macro = { path = "../proxmox/proxmox-api-macro" }
# proxmox-apt-api-types = { path = "../proxmox/proxmox-apt-api-types" }
# proxmox-apt = { path = "../proxmox/proxmox-apt" }
# proxmox-async = { path = "../proxmox/proxmox-async" }
# proxmox-auth-api = { path = "../proxmox/proxmox-auth-api" }
# proxmox-borrow = { path = "../proxmox/proxmox-borrow" }
# proxmox-client = { path = "../proxmox/proxmox-client" }
# proxmox-compression = { path = "../proxmox/proxmox-compression" }
# proxmox-config-digest = { path = "../proxmox/proxmox-config-digest" }
# proxmox-daemon = { path = "../proxmox/proxmox-daemon" }
# proxmox-dns-api = { path = "../proxmox/proxmox-dns-api" }
# proxmox-http-error = { path = "../proxmox/proxmox-http-error" }
# proxmox-http = { path = "../proxmox/proxmox-http" }
# proxmox-human-byte = { path = "../proxmox/proxmox-human-byte" }
# proxmox-io = { path = "../proxmox/proxmox-io" }
# proxmox-lang = { path = "../proxmox/proxmox-lang" }
# proxmox-ldap = { path = "../proxmox/proxmox-ldap" }
# proxmox-login = { path = "../proxmox/proxmox-login" }
# proxmox-log = { path = "../proxmox/proxmox-log" }
# proxmox-metrics = { path = "../proxmox/proxmox-metrics" }
# proxmox-network-api = { path = "../proxmox/proxmox-network-api" }
# proxmox-notify = { path = "../proxmox/proxmox-notify" }
# proxmox-openid = { path = "../proxmox/proxmox-openid" }
# proxmox-product-config = { path = "../proxmox/proxmox-product-config" }
# proxmox-rest-server = { path = "../proxmox/proxmox-rest-server" }
# proxmox-router = { path = "../proxmox/proxmox-router" }
# proxmox-rrd = { path = "../proxmox/proxmox-rrd" }
# proxmox-schema = { path = "../proxmox/proxmox-schema" }
# proxmox-section-config = { path = "../proxmox/proxmox-section-config" }
# proxmox-serde = { path = "../proxmox/proxmox-serde" }
# proxmox-shared-memory = { path = "../proxmox/proxmox-shared-memory" }
# proxmox-simple-config = { path = "../proxmox/proxmox-simple-config" }
# proxmox-sortable-macro = { path = "../proxmox/proxmox-sortable-macro" }
# proxmox-subscription = { path = "../proxmox/proxmox-subscription" }
# proxmox-syslog-api = { path = "../proxmox/proxmox-syslog-api" }
# proxmox-sys = { path = "../proxmox/proxmox-sys" }
# proxmox-systemd = { path = "../proxmox/proxmox-systemd" }
# proxmox-tfa = { path = "../proxmox/proxmox-tfa" }
# proxmox-time-api = { path = "../proxmox/proxmox-time-api" }
# proxmox-time = { path = "../proxmox/proxmox-time" }
# proxmox-uuid = { path = "../proxmox/proxmox-uuid" }
# proxmox-worker-task = { path = "../proxmox/proxmox-worker-task" }
