[package]
name = "proxmox-datacenter-manager"
description = "Proxmox Datacenter Manager API"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "fs", "io-util", "io-std", "macros", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "time" ] }

proxmox-rest-server.workspace = true
proxmox-router = { workspace = true, features = [ "cli", "server"] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }

pdm-buildcfg.workspace = true
