[package]
name = "proxmox-datacenter-client"
description = "Proxmox Datacenter Manager command line client"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
http.workspace = true
libc.workspace = true
log.workspace = true
once_cell.workspace = true
openssl.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "time" ] }
webauthn-rs.workspace = true
xdg.workspace = true

pdm-api-types.workspace = true
pdm-client.workspace = true

proxmox-async.workspace = true
proxmox-client = { workspace = true, features = [ "hyper-client" ] }
proxmox-router = { workspace = true, features = [ "cli" ], default-features = false }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-sys.workspace = true
