[package]
name = "server"
description = "Proxmox Datacenter Manager Common API parts"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
const_format.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
once_cell.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
tokio = { workspace = true, features = [ "fs", "io-util", "io-std", "macros", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "time" ] }
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

proxmox-access-control = { workspace = true, features = [ "api" ] }
proxmox-async.workspace = true
proxmox-auth-api = { workspace = true, features = [ "api", "ticket", "pam-authenticator", "password-authenticator" ] }
proxmox-base64.workspace = true
proxmox-daemon.workspace = true
proxmox-http = { workspace = true, features = [ "client-trait", "proxmox-async" ] } # pbs-client doesn't use these
proxmox-lang.workspace = true
proxmox-log.workspace = true
proxmox-login.workspace = true
proxmox-rest-server = { workspace = true, features = [ "templates" ] }
proxmox-router = { workspace = true, features = [ "cli", "server"] }
proxmox-rrd.workspace = true
proxmox-rrd-api-types.workspace = true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-section-config.workspace = true
proxmox-serde = { workspace = true, features = [ "serde_json" ] }
proxmox-sortable-macro.workspace = true
proxmox-subscription = { workspace = true, features = [ "api-types", "impl" ] }
proxmox-sys = { workspace = true, features = [ "timer" ] }
proxmox-systemd.workspace = true
proxmox-tfa = { workspace = true, features = [ "api" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true

proxmox-apt = { workspace = true, features = [ "cache" ] }
proxmox-apt-api-types.workspace = true

proxmox-client = { workspace = true, features = [ "hyper-client"] }

proxmox-config-digest = { workspace = true, features = [ "openssl" ] }
proxmox-product-config.workspace = true
proxmox-dns-api = { workspace = true, features = [ "impl" ] }
proxmox-time-api = { workspace = true, features = [ "impl" ] }
proxmox-network-api = { workspace = true, features = [ "impl" ] }
proxmox-syslog-api = { workspace = true, features = [ "impl" ] }
proxmox-acme-api = { workspace = true, features = [ "impl" ] }

pdm-api-types.workspace = true
pdm-buildcfg.workspace = true
pdm-config.workspace = true
pdm-search.workspace = true

pve-api-types = { workspace = true, features = [ "client" ] }
pbs-api-types.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(remote_config, values("faked"))']
