[package]
name = "pdm-ui"
version = "0.1.10"
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox-datacenter-manager.git"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gloo-net = "0.4"
gloo-timers = "0.3"
gloo-utils = "0.2"
http = "0.2.9"
js-sys = "0.3.69"
log = "0.4.6"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Location"] }
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }

pwt = "0.5.0"
pwt-macros = "0.3"

proxmox-yew-comp = { version = "0.4.5", features = ["apt", "dns", "network", "rrd"] }

proxmox-client = "0.5"
proxmox-human-byte = "0.1.3"
proxmox-login = "0.2"
proxmox-schema = "4"
proxmox-rrd-api-types = "1"
pbs-api-types = "0.2.0"

pdm-api-types = { version = "0.1", path = "../lib/pdm-api-types" }
pdm-ui-shared = { version = "0.1", path = "../lib/pdm-ui-shared" }
pdm-client = { version = "0.1", path = "../lib/pdm-client" }

[patch.crates-io]
# proxmox-client = { path = "../../proxmox/proxmox-client" }
# proxmox-human-byte = { path = "../../proxmox/proxmox-human-byte" }
# proxmox-login = { path = "../../proxmox/proxmox-login" }
# proxmox-rrd-api-types = { path = "../../proxmox/proxmox-rrd-api-types" }
# proxmox-schema = { path = "../../proxmox/proxmox-schema" }
# proxmox-yew-comp = { path = "../../proxmox-yew-comp" }
# pwt = { path = "../../proxmox-yew-widget-toolkit" }
# pwt-macros = { path = "../../proxmox-yew-widget-toolkit/pwt-macros" }
