[package]
name = "pdm-ui"
version = "0.9.2"
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox-datacenter-manager.git"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gloo-net = "0.4"
gloo-timers = "0.3"
gloo-utils = "0.2"
http = "1"
js-sys = "0.3.69"
log = "0.4.6"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["Location"] }
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }

pwt = "0.7.1"
pwt-macros = "0.5"

proxmox-yew-comp = { version = "0.7.1", features = ["apt", "dns", "network", "rrd"] }

proxmox-acme-api = "1"
proxmox-client = "1"
proxmox-human-byte = "1"
proxmox-login = "1"
proxmox-schema = "5"
proxmox-rrd-api-types = "1"
proxmox-node-status = "1"
pbs-api-types = "1.0.3"

pdm-api-types = { version = "0.9", path = "../lib/pdm-api-types" }
pdm-client = { version = "0.9", path = "../lib/pdm-client" }

pdm-ui-shared = { version = "0.9", path = "../lib/pdm-ui-shared" }

pdm-search = { version = "0.2", path = "../lib/pdm-search" }

[patch.crates-io]
# proxmox-client = { path = "../../proxmox/proxmox-client" }
# proxmox-human-byte = { path = "../../proxmox/proxmox-human-byte" }
# proxmox-login = { path = "../../proxmox/proxmox-login" }
# proxmox-rrd-api-types = { path = "../../proxmox/proxmox-rrd-api-types" }
# proxmox-schema = { path = "../../proxmox/proxmox-schema" }
# proxmox-yew-comp = { path = "../../proxmox-yew-comp" }
# pwt = { path = "../../proxmox-yew-widget-toolkit" }
# pwt-macros = { path = "../../proxmox-yew-widget-toolkit/pwt-macros" }
