[package]
name = "proxmox-login"
version = "0.1.0"
description = "proxmox product api authentication"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
percent-encoding.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true

# For webauthn types
webauthn-rs = { workspace = true, optional = true }

# For `Authentication::set_auth_headers`
http = { version = "0.2.4", optional = true }

[features]
default = ["webauthn"]
webauthn = [ "dep:webauthn-rs" ]
http = ["dep:http"]
