[package]
name = "pve-client"
description = "Proxmox VE client library crate"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
hyper = { workspace = true, features = [ "client", "tcp", "http1", "http2" ] }

proxmox-client = { workspace = true, features = [ "hyper-client" ] }
proxmox-http.workspace = true
proxmox-login.workspace = true
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
