[package]
name = "server"
description = "Proxmox Datacenter Manager Common API parts"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bitflags.workspace = true
const_format.workspace = true
futures.workspace = true
h2.workspace = true
handlebars.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
once_cell.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
syslog.workspace = true
termcolor.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "fs", "io-util", "io-std", "macros", "net", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "time" ] }
tokio-openssl.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = [ "codec" ] }
tower-service.workspace = true
url.workspace = true
walkdir.workspace = true
xdg.workspace = true
zstd.workspace = true

proxmox-async.workspace = true
proxmox-auth-api = { workspace = true, features = [ "api", "ticket", "pam-authenticator" ] }
proxmox-http = { workspace = true, features = [ "client-trait", "proxmox-async" ] } # pbs-client doesn't use these
proxmox-io.workspace = true
proxmox-lang.workspace = true
proxmox-rest-server = { workspace = true, features = [ "templates" ] }
proxmox-router = { workspace = true, features = [ "cli", "server"] }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-section-config.workspace = true
proxmox-serde = { workspace = true, features = [ "serde_json" ] }
proxmox-shared-memory.workspace = true
proxmox-sortable-macro.workspace = true
proxmox-subscription.workspace = true
proxmox-sys = { workspace = true, features = [ "timer" ] }
proxmox-tfa = { workspace = true, features = [ "api" ] }
proxmox-time.workspace = true
proxmox-uuid.workspace = true

proxmox-acme.workspace = true
proxmox-apt.workspace = true
proxmox-client.workspace = true
proxmox-openid.workspace = true

proxmox-config-digest = { workspace = true, features = [ "openssl" ] }
proxmox-product-config.workspace = true
proxmox-dns-api = { workspace = true, features = [ "impl" ] }
proxmox-time-api = { workspace = true, features = [ "impl" ] }
proxmox-network-api = { workspace = true, features = [ "impl" ] }
proxmox-syslog-api = { workspace = true, features = [ "impl" ] }

pdm-api-types.workspace = true
pdm-buildcfg.workspace = true
pdm-config.workspace = true

pve-api-types = { workspace = true, features = [ "client" ] }
