[package]
name = "proxmox-datacenter-manager-admin"
description = "Local Proxmox Datacenter Manager administration CLI"
homepage = "https://www.proxmox.com"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

proxmox-async.workspace = true
proxmox-log.workspace = true
proxmox-product-config.workspace = true
proxmox-router = { workspace = true, features = [ "cli" ], default-features = false }
proxmox-schema = { workspace = true, features = [ "api-macro" ] }
proxmox-access-control.workspace = true

pdm-api-types.workspace = true
pdm-config.workspace = true
pdm-buildcfg.workspace = true
server.workspace = true
